plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.0'
	id 'io.spring.dependency-management' version '1.1.0'
}

group = 'zzangmin'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa:3.2.12'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.12'
	implementation 'org.springframework.boot:spring-boot-starter-web:3.2.12'
	implementation 'org.springframework.boot:spring-boot-configuration-processor:3.2.12'
	implementation 'org.springframework.boot:spring-boot-starter-aop:3.2.12'
	compileOnly 'org.projectlombok:lombok:1.18.32'
	runtimeOnly 'com.mysql:mysql-connector-j:8.0.33'
	annotationProcessor 'org.projectlombok:lombok:1.18.32'
	testImplementation 'org.springframework.boot:spring-boot-starter-test:3.2.12'
	testImplementation 'org.mockito:mockito-core:5.11.0'

	// aws sdk for java
	implementation 'software.amazon.awssdk:ssm:2.25.39'
	implementation 'software.amazon.awssdk:cloudwatch:2.25.39'
	implementation 'software.amazon.awssdk:rds:2.25.39'
	implementation 'software.amazon.awssdk:pi:2.25.39'
	implementation 'software.amazon.awssdk:secretsmanager:2.25.39'
	implementation 'software.amazon.awssdk:sts:2.25.39'
	implementation 'software.amazon.awssdk:core:2.25.39'

	implementation 'org.apache.httpcomponents.client5:httpclient5:5.3.1'

	// slack
	implementation 'com.google.code.gson:gson:2.10.1'
	implementation 'com.squareup.okhttp3:okhttp:4.12.0'
	implementation 'com.slack.api:slack-app-backend:1.38.3'
	implementation 'com.slack.api:slack-api-model:1.38.3'
	implementation 'com.slack.api:slack-api-client:1.38.3'


	// signature hex
	implementation 'commons-codec:commons-codec:1.15'

	// sql parser
	implementation 'com.github.jsqlparser:jsqlparser:4.9'

}

tasks.named('test') {
	useJUnitPlatform()
}
